[metadata]
name = particle-tracking
version = 0.0.2

[options]
install_requires =
    numpy
    tifffile
    dask
    dask_image
    segmentation_models_pytorch
    tqdm
    scikit-image
    torch @ https://download.pytorch.org/whl/cu111/torch-1.8.0%%2Bcu111-cp37-cp37m-linux_x86_64.whl ; platform_system=='Linux'
    torchvision @ https://download.pytorch.org/whl/cu111/torchvision-0.9.0%%2Bcu111-cp37-cp37m-linux_x86_64.whl ; platform_system=='Linux'
    torchaudio @ https://download.pytorch.org/whl/torchaudio-0.8.0-cp36-cp36m-linux_x86_64.whl ; platform_system=='Linux'
    torch @ https://download.pytorch.org/whl/cu117/torch-2.0.1%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchvision @ https://download.pytorch.org/whl/cu117/torchvision-0.15.2%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchaudio @ https://download.pytorch.org/whl/cu117/torchaudio-2.0.2%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    
packages = find:

packages_dir = 
    =libs

[options.packages.find]
where = libs
include = particle_tracking*


