[metadata]
name = particle-tracking
version = 0.0.9
author= Abhishek Patil
email = abhishek@zeroth.me
description= ML based particle tracking
long_description = file: README.md
keywords= particle, tracking, single-molecule, ml
license = MIT


[options]
install_requires =
    numpy
    tifffile
    dask
    dask_image
    segmentation_models_pytorch
    tqdm
    scikit-image
    pandas
    trackpy
    torch @ https://download.pytorch.org/whl/cu117/torch-2.0.1%%2Bcu117-cp39-cp39-linux_x86_64.whl ; platform_system=='Linux'
    torchvision @ https://download.pytorch.org/whl/cu117/torchvision-0.15.2%%2Bcu117-cp39-cp39-linux_x86_64.whl ; platform_system=='Linux'
    torchaudio @ https://download.pytorch.org/whl/cu117/torchaudio-2.0.2%%2Bcu117-cp39-cp39-linux_x86_64.whl ; platform_system=='Linux'
    torch @ https://download.pytorch.org/whl/cu117/torch-2.0.1%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchvision @ https://download.pytorch.org/whl/cu117/torchvision-0.15.2%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    torchaudio @ https://download.pytorch.org/whl/cu117/torchaudio-2.0.2%%2Bcu117-cp39-cp39-win_amd64.whl ; platform_system=='Windows'
    
packages = find:

packages_dir = 
    =libs

[options.packages.find]
where = libs
include = particle_tracking*


